--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 				</div>
 		</header>
 
-		<h3><span>1 </span>WHAT IS YOUR SPECIFIC NEED?</h3>
+		<h3 class="quest-one-title"><span class="number-one">1 </span>WHAT IS YOUR SPECIFIC NEED?</h3>
 
 		<div class="quest-one-content">
 			<div class="column" id="column-left">
 				<a href="#" id="quest-one-one"><div>Accident & Health</div></a>
 				<a href="#" id="quest-one-two"><div>Admitted Casualty</div></a>
-				<a href="#" id="quest-one-three"><div>Admitted Casualty Specialty Business</div></a>
+				<a href="#" id="quest-one-three"><div>Specialty Business</div></a>
 				<a href="#" id="quest-one-four"><div>Bail/Immigration Bonds</div></a>
 				<a href="#" id="quest-one-five"><div>Builder's Risk</div></a>
 				<a href="#" id="quest-one-six"><div>Commercial Surety</div></a>
@@ -62,16 +62,36 @@
 
 		<aside>
 			<p>AT A GLANCE</p>
-
+			<div id="glance-quest-one"></div>
 		</aside>
 
 
-		<h3 class="quest-two-title"><span>2 </span>WHAT CATEGORY?</h3>
+		<h3 class="quest-two-title"><span class="number-two">2 </span>WHAT CATEGORY?</h3>
 
-		<div class="quest-two-content">
+		<div id="quest-two-container">
+			<div id="quest-two-one" class="hidden">
+				<div><input class='radio' type='radio' id='infotwo' name='infotwo' value='1' /> Medical</div>
+				<div><input class='radio' type='radio' name='opt' value='2' /> Ancillary Benefits</div>
+				<div><input class='radio' type='radio' name='opt' value='3' /> Special Risk</div>
+				<div><input class='radio' type='radio' name='opt' value='4' /> Travel</div>
+				<div><input class='radio' type='radio' name='opt' value='5' /> Pet Accident and Sickness</div>
+			</div>
+			<div id="quest-two-two" class="hidden">
+				<div><input class='radio' type='radio' id='info1' name='info1' value='1' /> Workers' Compensation</div>
+				<div><input id='info2' class='radio' type='radio' name='opt' value='2' /> Commercial Automobile</div>
+				<div><input id='info3' class='radio' type='radio' name='opt' value='3' /> General Liability</div>
+				<div><input id='info4' class='radio' type='radio' name='opt' value='4' /> Commercial Package</div>
+				<div><input id='info5' class='radio' type='radio' name='opt' value='5' /> Umbrella</div>
+			</div>
+		</div>
+
+		<h3 class="quest-three-title"><span class="number-three">3 </span>HERE'S YOUR INFORMATION</h3>
 		
 
-
+		<div id="quest-three-container">
+			<div class="quest-three-one">
+				<div class='info' id='medical' name='test'><h4>Type of Products</h4><p>Employer Stop Loss<br>Organ Transplant<br></div>
+			</div>
 		</div>
 
 
